<resources>
    <string name="app_name">Presidenta ALFIN</string>
    <string name="title_activity_navegacion">Navegacion</string>
    <string name="titleHome">Inicio</string>
    <string name="titleGpo">Mi Grupo </string>
    <string name="titlePagos">Pagos</string>
    <string name="titleBonos">Bonificación</string>
    <string name="titleMBonos">Mis Bonificaciones</string>
    <string name="titlePagosFragment">Calendario de Pagos</string>
    <string name="ingresar">     Ingresar       </string>
    <string name="usuario">Usuario</string>
    <string name="title_activity_calculadora">calculadora_activity</string>
    <string name="espera">Espere un momento \n Cargando información …</string>
    <string name="ganar">AÚN PUEDES GANAR</string>

    <!--EXPERSIONES REGULARES -->

    <string name="rexUSUARIO">[0-9]*</string>
    <string name="rexCELULAR">[0-9]{10}+</string>
    <string name="rexNIP">[0-9]{4}+</string>

    <!--url -->
    <!--
    <string name="urlLogin">https://api.micartera.test.alfin.com.mx/api/user-nip-validate</string>
    <string name="urlValicionLogin">https://api.micartera.test.alfin.com.mx/api/customer-validations</string>
    <string name="urlRegistroCliente">https://api.micartera.test.alfin.com.mx/api/user-app-register</string>
    <string name="urlActualizarNip">https://api.micartera.test.alfin.com.mx/api/user-nip-update</string>
    <string name="urlDatosCredito">https://api.micartera.test.alfin.com.mx/api/credit-group-status</string>
    <string name="urlMiembrosGrupo">https://api.micartera.test.alfin.com.mx/api/group-members-pays</string>
    <string name="urlPagosGrupo">https://api.micartera.test.alfin.com.mx/api/group-pays</string>
    <string name="urlDetalleCliente">https://api.micartera.test.alfin.com.mx/api/customer-credit-status</string>
    <string name="urlGuardarJunta">https://api.micartera.test.alfin.com.mx/api/group-task-create</string>
    <string name="urlEnviarEmail">https://api.micartera.test.alfin.com.mx/api/group-help-sendmail</string>
    <string name="urlHistorialGrupo">https://api.micartera.test.alfin.com.mx/api/group-credits</string>
    <string name="urlJuntasPgo">https://api.micartera.test.alfin.com.mx/api/group-task-show</string>
    <string name="urlDatosJuntasPgo">https://api.micartera.test.alfin.com.mx/api/group-task-members</string>
    <string name="urlPagosConciliar">https://api.micartera.test.alfin.com.mx/api/group-payments</string>
    <string name="urlGuardarJuntaConciliacion">https://api.micartera.test.alfin.com.mx/api/group-task-concilied</string>
    <string name="urlBonificaciones">https://api.micartera.test.alfin.com.mx/api/get-bonus-pay</string>
    -->
    <string name="url">https://api.micartera.test.alfin.com.mx/</string>
    <string name="metLogin">api/user-nip-validate</string>
    <string name="metValicionLogin">api/customer-validations</string>
    <string name="metRegistroCliente">api/user-app-register</string>
    <string name="metActualizarNip">api/user-nip-update</string>
    <string name="metDatosCredito">api/credit-group-status</string>
    <string name="metMiembrosGrupo">api/group-members-pays</string>
    <string name="metPagosGrupo">api/group-pays</string>
    <string name="metDetalleCliente">api/customer-credit-status</string>
    <string name="metGuardarJunta">api/group-task-create</string>
    <string name="metEnviarEmail">api/group-help-sendmail</string>
    <string name="metHistorialGrupo">api/group-credits</string>
    <string name="metJuntasPgo">api/group-task-show</string>
    <string name="metDatosJuntasPgo">api/group-task-members</string>
    <string name="metPagosConciliar">api/group-payments</string>
    <string name="metGuardarJuntaConciliacion">api/group-task-concilied</string>
    <string name="metBonificaciones">api/get-bonus-pay</string>
    <!--Strings para Envio Sms-->
    <string name="idApp">1000</string>
    <string name="url_envio_smsOld">http://34.133.226.228:90/Servicios.svc/rest/ConfirmacionSms</string>
    <!--<string name="url_envio_sms">http://34.133.226.228:90/Servicios.svc/rest/EnvioSms</string> URL DE SMS DESARROLLO-->
    <string name="url_envio_sms">http://servicios.kasli.com.mx/Servicios.svc/rest/EnvioSms</string> <!--URL SMS CON DOMINIO-->
    <!--Strings para Envio Sms-->

    <!--headers peticion -->
    <string name="content_type">application/json</string>
    <string name="header_email">apicartera@alfin.com</string>
    <string name="header_password">password</string>
    <string name="header_api_key">1df6a7c1-3057-4dcd-a73a-26bbc46bc860</string>

    <!-- Activity Registro-->
    <string name="vCodigo">Verificación Código</string>
    <string name="btnVCodigo">Verificar</string>
    <string name="btnRCodigo">Reenviar</string>
    <string name="envioSms">Hemos enviado un mensaje SMS con tu código de verificación al número registrado, por favor ingrésalo.</string>
    <string name="home"><img src="@drawable/ic_warning" />sfsds</string>
    <!-- Activity NIP-->
    <string name="crea_nip">Genera un NIP de acceso</string>
    <string name="info_nip"> Este NIP de 4 dígitos servirá para iniciar sesión</string>
    <string name="rec_nip">Recuérdalo y no lo compartas con nadie</string>
    <string name="c_nip">Vuelve a ingresar el NIP </string>
    <string name="btnRegistrar">CONTINUAR</string>

    <!--mensajes -->
    <string name="noConexion">No es posible mostrar información \n No cuenta con conexión a Internet</string>
    <string name="error">Ocurrio un error. Favor de intentarlo más tarde.</string>
    <string name="errorServidor">Ocurrio un error. Favor de intentarlo más tarde.</string>

    <!--Strings para GeneralUtils.kt-->
    <!--Instalacion de Apps-->
    <string name="instalacion_app">Para poder continuar es necesario tener instalada la aplicacion.</string>
    <string name="play_store">https://play.google.com/store/apps/details?id=</string>

    <!--Mensajes para Permisos-->
    <string name="permisos_denegados">Permisos denegados</string>
    <string name="mensaje_permisos_denegados">Para poder continuar es necesario que se acepten los permisos</string>

    <!--Mensaje para habilitar GPS-->
    <string name="estatus_gps">Para poder continuar, es necesario activar la ubicacion.</string>
    <!--Fin Strings para GeneralUtils-->

    <!--Strings para WhatsApp-->
    <string name="packagename_whats">com.whatsapp</string>
    <string name="mensaje_whats">Hola estimada</string>
    <!--Fin Strings para WhatsApp-->

    <!--Strings para Camara-->
    <string name="extension_foto">.jpeg</string>
    <string name="ayudaSolitada">Mensaje enviado exitosamente</string>
    <!--Strings para Camara-->

    <!--Strings para Registro de Token Firebase-->
    <string name="url_registro_token">http://34.133.226.228/Servicios.svc/rest/AltaTokenFirebase</string>
    <string name="token">TOKEN_FIREBASE</string>
    <string name="tokenPruebas">asdfasdfwfwefsdfsd</string>
    <!--Strings para Registro de Token Firebase-->


    <!--Mensaje para error envio sms-->
    <string name="error_sms">Ocurrio un error, favor de intentarlo más tarde.</string>
    <!--fin mensaje para error envio sms-->

    <!--String para configuracion del tema oscuro-->
    <string name="configuracion_tema_llave" translatable="false">theme</string>
    <!--Fin para configuracion del tema oscuro-->
    <string name="hyperlink"> Acerca de <a href="http://www.alfin.mx/site/index.php/es/">Política de privacidad</a> y nuestros Términos y Condiciones </string>
    <string name="hyperlinkMain">Al registrarte estas aceptando nuestra <a href="http://www.alfin.mx/site/index.php/es/">Política de privacidad</a> y nuestros Términos y Condiciones</string>
</resources>